fix z-index on navbar

--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -166,7 +166,7 @@
     &.fixed {
       position: fixed;
       width: 100%;
-      z-index: 10;
+      z-index: 100;
       top: 0;
       transform: translateY(-90px);
       animation: navbar 0.4s ease-in forwards;
